# image-workflows

./: .bumpversion.cfg  .env-stub  .gitignore  .pre-commit-config.yaml  INSTALL.md  README.md  bbbc_conversion_config.json  nested_types.yaml  pre-commit  pyproject.toml  ref_step_wf_image_processing.yaml  wic_dependencies.yml  workflow5.cwl  workflow_config.json
compute/: viz_workflow_BBBC001.json  viz_workflow_BBBC001_download.json
config/: BBBC_BBBC1.yaml
config/BBBC/: BBBC001.yaml  BBBC001_old.yaml
config/download/BBBC/: BBBC001_download.yaml  BBBC003_download.yaml  BBBC004_download.yaml  BBBC007_download.yaml  BBBC008_download.yaml
config/full/BBBC/: BBBC001.yaml  BBBC001_ timesliceNaming.yaml
config/partial/BBBC/: BBBC001_download_only.yaml  BBBC001_process_only.yaml
cwl/: ApplyFlatfield.cwl  BasicFlatfieldEstimation.cwl  BbbcDownload.cwl  FileRenaming.cwl  ImageAssembler.cwl  Montage.cwl  OmeConverter.cwl  PrecomputeSlide.cwl
debug/: debug_apply_flat_field.py  debug_basic_docker.py
examples/: model.py  single_process_phase2.py  single_process_test_wic.py  single_workflow.py  test_api.py
examples/api/: model.py  model2.py  test_current_api.py  test_hierarchy.py
examples/cwl/: scatter.cwl  scatter2.cwl
examples/cwl/basic/: docker.cwl  (+10 more)
examples/workflows/: debug_load_process.py  debug_pydantic.py  debug_refs.py  debug_scatter.py  debug_types.py  debug_workflow_builder.py  demo_image_processing.py  demo_image_processing_manual.py  demo_image_processing_updated.py
notebooks/: render.ipynb  render_test.ipynb  workflow.ipynb
notebooks/.ipynb_checkpoints/: render-checkpoint.ipynb
src/: compute.py  token_service.py  viz_workflow.py
tests/: conftest.py  test_build.py  test_build_pipelines.py  test_compute.py  test_models.py  test_pipelines.py
tests/models/: test_models.py
tests/workflows/: conftest.py  test_conditional.py  test_load.py  test_model.py  test_pydantic_v2.py  test_roundtrip.py  test_save.py  test_scatter.py  test_step_builder.py  test_types.py  test_value_assignment.py  test_workflow_builder.py  to_translate_to_test_model.py
wic-api-v2/: echo_string  serialized_clt.cwl  validation_echo_touch_explicit_wic2_wf.txt  validation_echo_touch_explicit_wic_wf.txt  validation_echo_touch_explicit_wic_wf_original.txt  validation_echo_touch_wf.txt  validation_subworkflow.txt
wic-api-v2/src/: api.py  conditional-workflow.cwl  conditional_workflow_generated.cwl  demo-api-2.py  demo-api.py  model.py  scatter-workflow1.cwl  scatter-workflow2.cwl  step_wf4.yaml  test-api.py  test_conditional.py  test_model.py  test_scatter.py  test_serial copy 2.py  test_serial.py  wf3_scatter.cwl
(+116 files in other folders)
