[tool.poetry]
name = "polus-pipelines"
version = "0.1.0"
description = "Build and execute workflows of polus plugins on Compute."
authors = ["Antoine Gerardin <antoine.gerardin@nih.gv>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
workflow-inference-compiler = {git = "https://github.com/camilovelezr/workflow-inference-compiler.git", rev = "viz"}
polus-plugins = {git = "https://github.com/PolusAI/polus-plugins"}
load-dotenv = "^0.1.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
