[tool.poetry]
name = "polus-pipelines"
version = "0.1.0"
description = "Build and execute pipelines of polus plugins on Compute."
authors = ["Antoine Gerardin <antoine.gerardin@nih.gv>"]
readme = "README.md"
packages = [{include = "polus", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
polus-plugins = {git = "https://github.com/PolusAI/polus-plugins"}
polus-render = "^0.0.4.0.1.5"
workflow-inference-compiler = {git = "https://github.com/camilovelezr/workflow-inference-compiler.git", rev = "da6f2a246880e0fb402a7351534abe0dac0641a1"}
load-dotenv = "^0.1.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
nbconvert = "^7.11.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"